# ComfyUI-Leputen-Utils

./: .gitignore  LICENSE  README.md  __init__.py  api.py  pyproject.toml  requirements.txt
core/: __init__.py  dds_header.py  dds_utils.py  loader_base.py  pbr_utils.py  texconv.py  utils.py
nodes/: __init__.py
nodes/dds/: __init__.py  cubemap.py  cubemap_loader.py  iterator.py  loader.py  saver.py
nodes/deepbump/: __init__.py  nodes.py
nodes/image/: __init__.py  iterator.py  load.py  save.py
nodes/pbr/: __init__.py  add_normals.py  extract_fine_details.py  generate_ao.py  height_to_normal.py  normal_map_converter.py  normal_map_strength.py  normalize_normals.py  roughness_glossiness.py
nodes/utility/: __init__.py  channel_operations.py  color_space.py  equalize.py  gigapixel.py  height_adjustment.py  histogram_matcher.py  resize_power_of_2.py  z_stack.py
web/: dds_preview.js  leputen_settings.js  progress_display.js  z_stack.js
